--- a/task001/index.html
+++ b/task001/index.html
@@ -1,1 +1,148 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>ifeBaidu-task001</title>
+</head>
+    <body>
+        <h1>This is the first title</h1>
+        <hr>
+        <ul>
+            <li><a href="https://www.baidu.com" style="text-decoration: none">Link ONE</a></li>
+            <li><a href="https://www.baidu.com" style="text-decoration: none">Link TWO</a></li>
+            <li><a href="https://www.baidu.com" style="text-decoration: none">Link Three</a></li>
+            <li><a href="https://www.baidu.com" style="text-decoration: none">Link Four</a></li>
+        </ul>
+        <hr>
+        <h2>First title of an article</h2>
+        <h3 style="font-weight: bold">Second title of an article</h3>
+        <p>Author BJTU Front Team</p>
+        <p>
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+        </p>
+        <p>
+            This is time to start another paragraph :
+        </p>
+        <p>
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+        </p>
+        <img src="img/IMG_7032.JPG" alt="This is a picture">
+        <p>
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+        </p>
+        <h2>Another first title of an article</h2>
+        <h3>Second title of an article</h3>
+        <p>
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+            This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+        </p>
+        <img src="img/IMG_6860.JPG" alt="This is a picture">
+        <ul>
+            <li>List part one</li>
+            <li>List part two</li>
+            <li>List part three</li>
+            <li>List part four</li>
+        </ul>
+        <h1>Picture</h1>
+        <p>Beautiful Picture</p>
+        <img src="img/IMG_6843.JPG" alt="This is a picture">
+        <p>Beautiful Picture</p>
+        <img src="img/IMG_6868.JPG" alt="This is a picture">
+        <p>Beautiful Picture</p>
+        <img src="img/IMG_6952.JPG" alt="This is a picture">
+        <p>Beautiful Picture</p>
+        <img src="img/IMG_6977.JPG" alt="This is a picture">
+        <h2>The title of the last article</h2>
+        <h3>Second title</h3>
+        <p>Author: BJTU Front Team</p>
+        <ul>
+            <li>Rank one</li>
+            <li>Rank Two</li>
+            <li>Rank Three</li>
+        </ul>
+        <p>This is a form, to be clear, I add border</p>
+        <table border="1" cellpadding="2" width="50%">
+            <tr style="background-color: cornflowerblue; color: aliceblue">
+                <th>Header one</th>
+                <th>Header two</th>
+                <th>Header three</th>
+            </tr>
+            <tr style="text-align: center">
+                <td>Content one</td>
+                <td>Content one</td>
+                <td><a href="http://ife.baidu.com">Command one</a></td>
+            </tr>
+            <tr style="text-align: center">
+                <td>Content two</td>
+                <td>Content two</td>
+                <td><a href="http://ife.baidu.com">Command two</a></td>
+            </tr>
+            <tr style="text-align: center">
+                <td>Total</td>
+                <td colspan="2" style="text-align: center">100000</td>
+            </tr>
+        </table>
+        <h2>Another column</h2>
+        <h3>Column</h3>
+        <p>
+            Enter your e-mail:
+            <input type="text" id="e-mail" name="e-mail" size="20" maxlength="40" placeholder="Input box">
+        </p>
+        <p>Please enter the address in right format</p>
+        <p>
+            Enter your password:
+            <input type="text" id="passwd" name="passwd" size="20" maxlength="40" placeholder="Input box">
+            Enter your password again:
+            <input type="text" id="passwda" name="passwda" size="20" maxlength="40" placeholder="Input box">
+        </p>
+        <p>Password can content number and alphabet</p>
+        <p>
+            Your sex:
+            <form>
+                <input type="radio" name="sex" value="male" /> Male
+                <input type="radio" name="sex" value="female" /> Female
+            </form>
+        </p>
+        <p>
+            City:
+        <form name="city">
+            <select name="city" id="city">
+                <option value="Beijing">Beijing</option>
+                <option value="HeNan">HeNan</option>
+                <option value="GuangZhou">GuangZhou</option>
+                <option value="Nanjing">Nanjing</option>
+            </select>
+        </form>
+        </p>
+        <p>
+            Hobby:
+            <form>
+                <input type="checkbox" name="ride bike">ride bike
+                <input type="checkbox" name="swim">swim
+                <input type="checkbox" name="run">run
+            </form>
+        </p>
+        <p>
+            Personal Description:
+            <br>
+            <textarea cols="50" rows="2" placeholder="Add here">
+            </textarea>
+            <input type="submit" value="submit">
+        </p>
+        <hr>
+        <p style="text-align: center"><strong>&copy 2016, BJTU Front Team, All rights reserved</strong></p>
+    </body>
+</html>
