--- a/task002/index.html
+++ b/task002/index.html
@@ -24,7 +24,7 @@
                 <h3>Second title</h3>
                 <h5>Author BJTU Front Team</h5>
                 <p>
-                        This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
                     This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
                     <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
                     This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
@@ -103,56 +103,57 @@
                 </table>
             </div>
             <div id="main-body">
-                <table style="border: solid 1px gray; height: 30px; width: 1px"></table>
                 <h2>Title</h2>
-                <p>
-                    Enter your e-mail:
-                    <input type="text" id="e-mail" name="e-mail" size="20" maxlength="40" placeholder="Input box">
-                </p>
-                <p>Please enter the address in right format</p>
-                <p>
-                    Enter your password:
-                    <input type="text" id="passwd" name="passwd" size="20" maxlength="40" placeholder="Input box">
-                    Enter your password again:
-                    <input type="text" id="passwda" name="passwda" size="20" maxlength="40" placeholder="Input box">
-                </p>
-                <p>Password can content number and alphabet</p>
-                <p>
-                    Your sex:
-                <form>
-                    <input type="radio" name="sex" value="male" /> Male
-                    <input type="radio" name="sex" value="female" /> Female
-                </form>
-                </p>
-                <p>
-                    City:
-                <form name="city">
-                    <select name="city" id="city">
-                        <option value="Beijing">Beijing</option>
-                        <option value="HeNan">HeNan</option>
-                        <option value="GuangZhou">GuangZhou</option>
-                        <option value="Nanjing">Nanjing</option>
-                    </select>
-                </form>
-                </p>
-                <p>
-                    Hobby:
-                <form>
-                    <input type="checkbox" name="ride bike">ride bike
-                    <input type="checkbox" name="swim">swim
-                    <input type="checkbox" name="run">run
-                </form>
-                </p>
-                <p>
-                    Personal Description:
-                    <br>
-            <textarea cols="50" rows="2" placeholder="Add here">
-            </textarea>
-                </p>
-                <div id="inp">
-                    <input type="submit" value="submit">
+                <div id="choose">
+                    <p>
+                        Enter your e-mail:
+                        <input type="text" id="e-mail" name="e-mail" size="20" maxlength="40" placeholder="Input box">
+                    </p>
+                    <p>
+                        Enter your e-mail:
+                        <input type="text" id="e-mail" name="e-mail" size="20" maxlength="40" placeholder="Input box">
+                    </p>
+                    <p>Please enter the address in right format</p>
+                    <p>
+                        Enter your password:
+                        <input type="text" id="passwd" name="passwd" size="20" maxlength="40" placeholder="Input box">
+                        Enter your password again:
+                        <input type="text" id="passwda" name="passwda" size="20" maxlength="40" placeholder="Input box">
+                    </p>
+                    <p>Password can content number and alphabet</p>
+                    <p>
+                        Your sex:
+                        <input type="radio" name="sex" value="male" /> Male
+                        <input type="radio" name="sex" value="female" /> Female
+                    </p>
+                    <p>
+                        City:
+                        <select name="city" id="city">
+                            <option value="Beijing">Beijing</option>
+                            <option value="HeNan">HeNan</option>
+                            <option value="GuangZhou">GuangZhou</option>
+                            <option value="Nanjing">Nanjing</option>
+                        </select>
+                    </p>
+                    <p>
+                        Hobby:
+                        <input type="checkbox" name="ride bike">ride bike
+                        <input type="checkbox" name="swim">swim
+                        <input type="checkbox" name="run">run
+                    </p>
+                    <p>
+                        Personal Description:
+                        <textarea cols="50" rows="2" placeholder="Add here">
+                        </textarea>
+                    </p>
+                    <div id="inp">
+                        <input type="submit" value="submit">
+                    </div>
                 </div>
             </div>
+        </div>
+        <div id="bottom">
+            <p class="copyright">&copy 2016, BJTU Front Team, All rights reserved</p>
         </div>
     </body>
 </html>
