--- a/task003/index.html
+++ b/task003/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>task003</title>
     <style>
+        .clearfix:after {
+            content:".";
+            display:block;
+            clear:both;
+        }
         div {
             display: block;
         }
@@ -67,7 +72,7 @@
     </style>
 </head>
     <body>
-        <div class="mainpage">
+        <div class="mainpage clearfix">
             <div class="left">
                 <p><img class="leftimg" src="img/2.png" alt="picture">BJTU Front Team</p>
             </div>
@@ -83,32 +88,7 @@
                     <p>
                         I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
                         I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
+                        I
                     </p>
                 </div>
             </div>
