--- a/task003/index.html
+++ b/task003/index.html
@@ -88,7 +88,8 @@
                     <p>
                         I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
                         I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
-                        I
+                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
+                        I don't have much to say!I don't have much to say!I don't have much to say!I don't have much to say!
                     </p>
                 </div>
             </div>
