change css index

--- a/task005/index.html
+++ b/task005/index.html
@@ -20,43 +20,108 @@
     </div>
     <div id="passage-body">
         <div id="main-body">
-            <h2>First title</h2>
-            <h3>Second title</h3>
-            <h5>Author BJTU Front Team</h5>
-            <p>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-            </p>
-            <img src="img/IMG_7282.JPG" alt="picture">
-            <p>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-            </p>
+            <div class="main-content">
+                <h2>First title</h2>
+                <h3>Second title</h3>
+                <h5>Author BJTU Front Team</h5>
+                <p>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                </p>
+                <img src="img/IMG_7282.JPG" alt="picture">
+                <p>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                </p>
+            </div>
+            <div class="main-content">
+                <h2>Another first title</h2>
+                <h3>Second title</h3>
+                <h5>Author BJTU Front Team</h5>
+                <p>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                </p>
+                <img src="img/IMG_6855.JPG" alt="picture">
+                <p>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                    This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
+                </p>
+                <ul>
+                    <li>List one</li>
+                    <li>list two</li>
+                    <li>list three</li>
+                </ul>
+            </div>
+            <div class="main-content">
+                <h2>Picture</h2>
+                <p>Beautiful picture</p>
+                <img src="img/IMG_6858.JPG" alt="picture">
+                <p>Beautiful picture</p>
+                <img src="img/5.pic.jpg" alt="picture">
+            </div>
+            <div class="main-content">
+                <h2>Last article</h2>
+                <h3>Second title</h3>
+                <h5>Author BJTU Front Team</h5>
+                <ol>
+                    <li>One</li>
+                    <li>Two</li>
+                    <li>Three</li>
+                </ol>
+                <p>This is a form</p>
+                <table cellspacing="0" cellpadding="3">
+                    <tr>
+                        <th>Header one</th>
+                        <th>Header two</th>
+                        <th>Header three</th>
+                    </tr>
+                    <tr>
+                        <td>One</td>
+                        <td>Two</td>
+                        <td><a href="https://baidu.com">Link One</a></td>
+                    </tr>
+                    <tr>
+                        <td>One</td>
+                        <td>Two</td>
+                        <td><a href="https://baidu.com">Link Two</a></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3" style="background-color: gainsboro">Total: 1000</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <div id="main-body-left">
-            <h2>Title</h2>
+        <div id="main-body-right">
+            <h2 style="border-left: solid 3px #CCCCCC; padding-left: 10px">Title</h2>
             <div id="choose">
                 <p>
                     Enter your e-mail:
-                    <input type="text" id="e-mail" name="e-mail" size="20" maxlength="40" placeholder="Input box">
+                    <input type="text" name="e-mail" size="20" maxlength="40" placeholder="Input box">
                 </p>
                 <p>
                     Enter your e-mail:
-                    <input type="text" id="e-mail" name="e-mail" size="20" maxlength="40" placeholder="Input box">
+                    <input type="text" name="e-mail" size="20" maxlength="40" placeholder="Input box">
                 </p>
                 <p class="gray">Please enter the address in right format</p>
                 <p>
                     Enter your password:
-                    <input type="text" id="passwd" name="passwd" size="20" maxlength="40" placeholder="Input box">
+                    <input type="text" name="passwd" size="20" maxlength="40" placeholder="Input box">
                     <br>
                     Enter your password again:
-                    <input type="text" id="passwda" name="passwda" size="20" maxlength="40" placeholder="Input box">
+                    <input type="text" name="passwda" size="20" maxlength="40" placeholder="Input box">
                 </p>
                 <p class="gray">Password can content number and alphabet</p>
                 <p>
@@ -81,76 +146,13 @@
                 </p>
                 <p>
                     Personal Description:
-                        <textarea cols="48" rows="2" placeholder="Add here">
+                        <textarea cols="40" rows="2" placeholder="Add here">
                         </textarea>
                 </p>
                 <div id="inp">
                     <input type="submit" value="submit">
                 </div>
             </div>
-        </div>
-        <div id="main-body">
-            <h2>Another first title</h2>
-            <h3>Second title</h3>
-            <h5>Author BJTU Front Team</h5>
-            <p>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-            </p>
-            <img src="img/IMG_6855.JPG" alt="picture">
-            <p>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                <a href="http://ife.baidu.com" target="_blank">Here is a link to ife</a>
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-                This is a very long paragraph This is a very long paragraph This is a very long paragraph This is a very long paragraph
-            </p>
-            <ul>
-                <li>List one</li>
-                <li>list two</li>
-                <li>list three</li>
-            </ul>
-        </div>
-        <div id="main-body">
-            <h2>Picture</h2>
-            <p>Beautiful picture</p>
-            <img src="img/IMG_6858.JPG" alt="picture">
-            <p>Beautiful picture</p>
-            <img src="img/5.pic.jpg" alt="picture">
-        </div>
-        <div id="main-body">
-            <h2>Last article</h2>
-            <h3>Second title</h3>
-            <h5>Author BJTU Front Team</h5>
-            <ol>
-                <li>One</li>
-                <li>Two</li>
-                <li>Three</li>
-            </ol>
-            <p>This is a form</p>
-            <table cellspacing="0" cellpadding="3">
-                <tr>
-                    <th>Header one</th>
-                    <th>Header two</th>
-                    <th>Header three</th>
-                </tr>
-                <tr>
-                    <td>One</td>
-                    <td>Two</td>
-                    <td><a href="https://baidu.com">Link One</a></td>
-                </tr>
-                <tr>
-                    <td>One</td>
-                    <td>Two</td>
-                    <td><a href="https://baidu.com">Link Two</a></td>
-                </tr>
-                <tr>
-                    <td colspan="3" style="background-color: gainsboro">Total: 1000</td>
-                </tr>
-            </table>
         </div>
     </div>
     <div id="bottom">
